<resources>
    <string name="app_name">Geographic Education</string>
    <string name="string_study">Study</string>
    <string name="string_play">Play</string>
    <string name="string_statistics">Statistics</string>
    <string name="string_geographic_education">Geographic Education</string>
    <string name="string_what_would_you_like_to_do">What would you like to do?</string>
    <string name="string_welcome_to">Welcome to</string>
    <string name="string_please_select_a_region">Please select a region:</string>
    <string name="country_flag">Country flag</string>
    <string name="countries_in_region">Countries in %1$s</string>
    <string name="country_and_alpha_code">%1$s (%2$s)</string>
    <string name="alpha2code">Alpha2Code: %1$s</string>
    <string name="country_capital">Capital: %1$s</string>
    <string name="country_population">Population: %1$s</string>
    <string name="country_area">Area: %1$s</string>
    <string name="country_local_time">Time: %1$s</string>
    <string name="country_currency_value">Currency value: %1$s</string>
    <string name="country_neighbors">Neighbors:</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="reload">Reload</string>
    <string name="what_would_you_like_to_play">What would you like to play?</string>
    <string name="guess_capital">Guess the capital</string>
    <string name="guess_neighbor">Guess the neighbor</string>
    <string name="guess_flag">Guess the flag</string>
    <string name="what_is_the_capital_of">What is the capital of</string>
    <string name="string_please_select_the_number_of_questions">Please select the number of questions:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_result">Game result:</string>
    <string name="correct_answers">Correct answers: %s</string>
    <string name="game_duration">Game duration: %s</string>
    <string name="game_date">Game date: %s</string>
    <string name="game_type">Game type: %s</string>
    <string name="what_is_the_neighbor_of">What is the neighbor of</string>
    <string name="what_is_the_flag_of">What is the flag of</string>
    <string name="game_results">Game results:</string>
    <string name="game_type_string">%s</string>
    <string name="there_are_no_records">There are no records</string>
    <string name="well_done_icon">Well done icon</string>
    <string name="data_saver">Data saver</string>
    <string name="something_went_wrong">Something went wrong...</string>
</resources>
