<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_type_text_view"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:text="@string/game_type_string"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_date_text_view"
            android:textSize="18sp"
            android:text="@string/game_date"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correct_answers_text_view"
            android:textSize="18sp"
            android:text="@string/correct_answers"/>

</LinearLayout>