<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <include layout="@layout/toolbar_main"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_welcome_to"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.8"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_geographic_education"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="28sp"
            android:id="@+id/titleTextView"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_what_would_you_like_to_do"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.3"
            android:id="@+id/guideTextView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toTopOf="@+id/study_button"
            app:layout_constraintVertical_bias="0.25"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/study_button"
            android:layout_height="60dp"
            android:layout_width="130dp"
            android:text="@string/string_study"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toTopOf="@+id/play_button"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_height="60dp"
            android:layout_width="130dp"
            android:text="@string/string_play"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/statistics_button"
            app:layout_constraintTop_toBottomOf="@+id/study_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/statistics_button"
            android:layout_height="60dp"
            android:layout_width="130dp"
            android:text="@string/string_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>