<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="helper"
                type="com.example.krs.geographiceducation.common.helpers.UtilsAndHelpers.Companion"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/activity_play">

        <include
                layout="@layout/toolbar_main"
                android:id="@+id/toolbar_local"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:id="@+id/switch_layout"
                app:layout_constraintBottom_toTopOf="@+id/intro_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_local">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_button"
                    android:checked="@={helper.dataSaverIsChecked}"
                    app:useMaterialThemeColors="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_saver"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_would_you_like_to_play"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_local"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/intro_text_view"
                android:layout_marginTop="120dp"
                app:layout_constraintHorizontal_bias="0.3"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_guess_capital"
                android:layout_height="60dp"
                android:layout_width="130dp"
                android:text="@string/guess_capital"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@+id/intro_text_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/button_guess_neighbor"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_guess_neighbor"
                android:layout_height="60dp"
                android:layout_width="130dp"
                android:text="@string/guess_neighbor"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_guess_capital"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintBottom_toTopOf="@+id/button_guess_flag"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_guess_flag"
                android:layout_height="60dp"
                android:layout_width="130dp"
                android:text="@string/guess_flag"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="140dp"
                app:layout_constraintTop_toBottomOf="@+id/button_guess_neighbor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

        <ListView
                android:id="@+id/region_list_view"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@+id/intro_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp">
        </ListView>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                android:id="@+id/loading_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_local"/>

        <ImageView
                android:id="@+id/error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_error"
                android:contentDescription="@string/error"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_local"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>